Fix border-radius on Firefox > 13
From https://developer.mozilla.org/en-US/docs/Web/CSS/border-radius:
Support for the prefixed version (-moz-border-radius) was removed in
Gecko 13.0 (Firefox 13.0 / Thunderbird 13.0 / SeaMonkey 2.10).

Fix to use "border-radius" instead.

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -158,9 +158,15 @@ a:hover {
   border-top: 1px solid lightgray;
   border-left: 1px solid lightgray;
   border-right: 1px solid lightgray;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 .commentPanelBorder.commentPanelLast {
   border-bottom: 1px solid lightgray;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 @if user.agent safari {
